1.4/manifests/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deployment-v2
  namespace: default
  labels:
    app: nginx-multitool-v2
    homework: "1.4"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-multitool-v2
  template:
    metadata:
      labels:
        app: nginx-multitool-v2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http-nginx
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-multitool
