1.4/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: default
  labels:
    app: backend
    homework: "1.4"
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
