1.4/manifests/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-clusterip
  namespace: default
  labels:
    app: nginx-multitool-v2
    homework: "1.4"
spec:
  selector:
    app: nginx-multitool-v2
  ports:
  - name: nginx
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: multitool
    protocol: TCP
    port: 9002
    targetPort: 8080
  type: ClusterIP
