1.4/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
  labels:
    app: frontend
    homework: "1.4"
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
