1.4/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: default
  labels:
    app: nginx-multitool-v2
    homework: "1.4"
spec:
  selector:
    app: nginx-multitool-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
